--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Midnight theme
-description: Midnight is a theme for GitHub Pages.
+title: Trond Fasteraune
+logo: /assets/img/logo.png
+description: BAFTA winning game developer with a great range of programming experience. Loves Procedural Programming and getting things done.<br>8+ years of experience working in the games industry with several released titles and awards.<br>15+ years of experience modding, mapping, scripting and having fun.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-midnight
