--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Trond Fasteraune
 logo: /assets/img/logo.png
-description: Knows how to make video games
+description: Makes video games
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
