--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Trond Fasteraune
 logo: /assets/img/logo.png
-description: Makes video games\nAnd has a BAFTA\nHire me
+description: Makes video games
+test
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
